--- a/index.html
+++ b/index.html
@@ -64,53 +64,38 @@
             padding: 8px;
             margin-bottom: 10px;
         }
+        .close-button {
+            background: red;
+            color: white;
+            border: none;
+            cursor: pointer;
+            padding: 5px 10px;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
     </style>
 </head>
-
 <body onload="onLoadFunction()">
-    <h1>Fetch Data from Lambda</h1>
+    <h1>Employee Tasks</h1>
     <div id="data-container">Loading data...</div>
 
     <br>
-    <button class="button" onclick="showAddTaskPopup()">Add Task</button>
     <button class="button" onclick="showRemoveTaskPopup()">Remove Task</button>
-
-    <!-- Popup for adding tasks -->
-    <div id="addTaskPopup" class="popup">
-        <h3>Add New Task</h3>
-        <form id="taskForm" action="https://tfyct2zj8k.execute-api.ap-south-1.amazonaws.com/A1/test3" method="POST" enctype="application/x-www-form-urlencoded">
-            <label for="employeeName">Employee Name:</label>
-            <input type="text" id="employeeName" name="eName" value="Ramita" required><br><br>
-
-            <label for="taskDescription">Task:</label>
-            <input type="text" id="taskDescription" name="TaskDescription" required><br><br>
-
-            <label for="StartDate">Start Date:</label>
-            <input type="date" id="StartDate" name="StartDate"><br><br>
-
-            <label for="EndDate">End Date:</label>
-            <input type="date" id="EndDate" name="EndDate"><br><br>
-
-            <label for="Remarks">Remarks:</label>
-            <input type="text" id="Remarks" name="Remarks"><br><br>
-
-            <button class="button" type="submit">Add</button>
-            <button class="button" type="button" onclick="closeAddTaskPopup()">Cancel</button>
-        </form>
-    </div>
 
     <!-- Popup for removing tasks -->
     <div id="removeTaskPopup" class="popup">
+        <button class="close-button" onclick="closeRemoveTaskPopup()">×</button>
         <h3>Remove Task</h3>
         <select id="taskSelect">
             <option value="">Loading tasks...</option>
         </select><br>
         <button class="button" onclick="removeTask()">Remove</button>
-        <button class="button" type="button" onclick="closeRemoveTaskPopup()">Cancel</button>
+        <button class="button" onclick="closeRemoveTaskPopup()">Cancel</button>
     </div>
 
     <!-- Overlay for popup -->
-    <div id="overlay" class="overlay" onclick="closePopup()"></div>
+    <div id="overlay" class="overlay" onclick="closeRemoveTaskPopup()"></div>
 
     <!-- Success message popup -->
     <div id="messagePopup" class="popup">
@@ -125,29 +110,18 @@
         }
 
         function fetchDataFromLambda() {
-            const apiUrl = 'https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/deepshikatest123';
+            const apiUrl = 'https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/deepshikatest123'; // Replace with your actual API
 
             fetch(apiUrl)
-                .then(response => response.text())  // Use .text() to handle HTML response
+                .then(response => response.text())
                 .then(data => {
-                    console.log("Fetched HTML data:", data);
-                    document.getElementById('data-container').innerHTML = data;  // Insert HTML into the container
+                    document.getElementById('data-container').innerHTML = data;
                 })
                 .catch(error => {
                     console.error('Error fetching data:', error);
                     const container = document.getElementById('data-container');
                     container.innerHTML = 'Failed to load data. Please check the console for details.';
                 });
-        }
-
-        function showAddTaskPopup() {
-            document.getElementById('addTaskPopup').style.display = 'block';
-            document.getElementById('overlay').style.display = 'block';
-        }
-
-        function closeAddTaskPopup() {
-            document.getElementById('addTaskPopup').style.display = 'none';
-            document.getElementById('overlay').style.display = 'none';
         }
 
         function showRemoveTaskPopup() {
@@ -162,18 +136,18 @@
         }
 
         function fetchTasksForRemoval() {
-            const apiUrl = 'https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/deepshikatest123';  // Replace with your actual API
+            const apiUrl = 'https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/tasks'; // Replace with your actual API
 
             fetch(apiUrl)
-                .then(response => response.json())  // Assuming the API returns JSON
+                .then(response => response.json())
                 .then(data => {
                     const select = document.getElementById('taskSelect');
-                    select.innerHTML = '<option value="">Select a task</option>';  // Clear existing options
+                    select.innerHTML = '<option value="">Select a task</option>';
 
                     data.tasks.forEach(task => {
                         const option = document.createElement('option');
-                        option.value = task.id;  // Assuming task has an id field
-                        option.textContent = task.description;  // Assuming task has a description field
+                        option.value = task.id; // Assuming task has an id field
+                        option.textContent = task.description; // Assuming task has a description field
                         select.appendChild(option);
                     });
                 })
@@ -192,7 +166,7 @@
                 return;
             }
 
-            const apiUrl = `https://your-lambda-url/remove-task/${taskId}`;  // Replace with your actual Lambda function URL
+            const apiUrl = `https://1yowx334wb.execute-api.ap-south-1.amazonaws.com/A1/Test4R`; // Replace with your actual Lambda function URL
 
             fetch(apiUrl, {
                 method: 'DELETE',
@@ -203,7 +177,7 @@
                 document.getElementById('messagePopup').style.display = 'block';
                 document.getElementById('overlay').style.display = 'block';
 
-                fetchDataFromLambda();  // Refresh the task list
+                fetchDataFromLambda(); // Refresh the task list
                 closeRemoveTaskPopup(); // Close the remove task popup
             })
             .catch(error => {
@@ -213,34 +187,10 @@
             });
         }
 
-        document.getElementById('taskForm').onsubmit = async function(event) {
-            event.preventDefault(); // Prevent the default form submission
-
-            const form = event.target;
-            const formData = new FormData(form);
-            const params = new URLSearchParams(formData).toString();
-
-            try {
-                const response = await fetch(form.action, {
-                    method: form.method,
-                    headers: {
-                        'Content-Type': form.enctype
-                    },
-                    body: params
-                });
-
-                const result = await response.json();
-                document.getElementById('messageContent').innerText = result.message;
-                document.getElementById('messagePopup').style.display = 'block';
-                document.getElementById('overlay').style.display = 'block';
-
-                closeAddTaskPopup(); // Close the add task popup
-            } catch (error) {
-                document.getElementById('messageContent').innerText = 'Error: ' + error.message;
-                document.getElementById('messagePopup').style.display = 'block';
-                document.getElementById('overlay').style.display = 'block';
-            }
-        };
+        function closeMessagePopup() {
+            document.getElementById('messagePopup').style.display = 'none';
+            document.getElementById('overlay').style.display = 'none';
+        }
     </script>
 </body>
 </html>
